--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ CHANGELOG
 3.8.0 (2019-11-15)
 ------------------
 * [BUG] fix missing file extension when handling files without an extension set in Moodle
+* [FEATURE] #6026 - add support for mod_lightboxgallery
 
 3.7.0 (2019-05-20)
 ------------------
