--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,6 +1,10 @@
 CHANGELOG
 =========
 
+3.9.0 (2020-05-xx)
+------------------
+* [FEATURE] add setting to control whether empty topics are excluded (github pull request #12)
+
 3.8.1 (2019-12-10)
 ------------------
 * [FIXED] fix appending file extension when there is already one
