#6899 - prevent downloading of assign intro files when description not visible

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,6 +1,10 @@
 CHANGELOG
 =========
 
+3.9.1 (2021-05-07)
+-------------------
+* [FIXED] prevent downloading intro files and content for assign when description not visible
+
 3.9.0 (2020-06-16)
 ------------------
 * Moodle 3.9 compatible version
