--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -2,6 +2,12 @@ CHANGELOG
 =========
 
 
+3.11.1 (2022-02-09)
+------------------
+* [FEATURE] #7120 - implement download as stream zip
+* [FEAUTRE] #7092 - implement mod-glossary support
+* [FEATURE] #7010 - improve downloadcenter design
+
 3.11.0 (2021-05-18)
 ------------------
 * Moodle 3.11 compatible version
