--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -2,6 +2,10 @@ CHANGELOG
 =========
 
 
+4.0.1 (2022-07-06)
+------------------
+* [FEATURE] #7077 - add Etherpad Lite support
+
 4.0.0 (2022-04-12)
 ------------------
 * Moodle 4.0 compatible version
