--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -2,9 +2,9 @@ CHANGELOG
 =========
 
 
-4.0.1 (2022-07-06)
+4.1.0 (2022-12-07)
 ------------------
-* [FEATURE] #7077 - add Etherpad Lite support
+* [FEATURE] #7342 - update for Moodle 4.1.0
 
 4.0.0 (2022-04-12)
 ------------------
